# a2ui

./: CHANGELOG.md  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md
examples/: custom_renderer.py  issue_tracker.py  vessel_manifest.py
src/a2ui/: __init__.py  core.py  intent.py  interface.py  renderers.py  schema.py
tests/: test_a2ui.py
