[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2ui"
version = "0.1.0"
description = "A2UI — Adaptive Interface. The Whistle Layer."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SuperInstance" }]
keywords = ["ui", "adaptive", "interface", "lcars", "schema-driven", "codegen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
